--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "california_teachers_study",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:9000",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -12,18 +11,22 @@
     "react-scripts": "3.4.1",
 
     "activedirectory": "^0.7.2",
-    "antd": "^4.3.3",
+    "antd": "4.3.3",
     "axios": "^0.19.2",
+    "better-sqlite3": "^7.1.0",
     "clickhouse": "^2.1.4",
     "d3": "^5.15.0",
-    "highcharts": "^8.0.0",
-    "highcharts-react-official": "^3.0.0",
+    "fontsource-roboto": "^2.1.4",
+    "highcharts": "8.0.0",
+    "highcharts-react-official": "3.0.0",
+    "json2csv": "^5.0.1",
     "normalize.css": "^8.0.0",
     "moment": "^2.25.3",
     "material-table": "^1.57.2",
     "@material-ui/core": "^4.9.2",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.54",
+    "primereact": "^4.2.2",
     "react-dual-listbox": "^2.0.0",
     "react-router-dom": "^5.1.2",
     "sequelize": "^5.21.7",
@@ -34,6 +37,7 @@
   "devDependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "express-pino-logger": "^4.0.0",
     "node-env-run": "^3.0.2",
     "nodemon": "^1.19.3",
