--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@material-ui/core": "^4.9.2",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.54",
+    "pdf-creator-node": "^1.4.1",
     "primereact": "^4.2.2",
     "react-dual-listbox": "^2.0.0",
     "react-router-dom": "^5.1.2",
